0.0.3_2 (yyyy-mm-dd)

    API Changes:
       - None.

    New Features:
       - None.

    Enhancements:
       - More informative exception messages
       - Add a demonstration "example/solo" command
       - Minor code, testing, and documentation improvements

    Bug Fixes:
       - try_lock_socket now actually returns 'undef' (intead of '0')
         as it said in the documentation. Although this is actually an
         API change the end result should not be different, and no-one
         is using this yet anyway.

0.0.2 (2014-09-13)

    Initial Release.